--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ MODE=DEV
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 DB_DATABASE=crud-nest
 DB_SYNCHRONIZE=true
