--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # compiled output
 /dist
 /node_modules
-.env
 
 # Logs
 logs
@@ -11,6 +10,9 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+
+# Ignore arquivos relacionados às chaves de API
+.env
 
 # OS
 .DS_Store
